add testimonial img, profile img, banner img. Fix bugged navbar on resize event

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,7 +1,7 @@
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
         <h1>Tim Broos</h1>
-        <p>Web Developer</p>
+        <p>Web Developer<br>Visual Artist<br>Coach</p>
         <div id="line"></div>
     </div>
 </section>
