--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="d-flex flex-column">
 
         <div class="profile">
-            <img src="assets/img/testimonials/placeholder.png" alt="" class="img-fluid rounded-circle">
+            <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
             <h1 class="text-light"><a href="index.html">Tim Broos</a></h1>
             <div class="social-links mt-3 text-center">
                 <a target="_blank" href="https://discordapp.com/users/148898245379096576" class="discord"><i class="bx bxl-discord"></i></a>
