--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div id="fakeBody">
+<div id="fakeBody" (window:resize)="onResize($event)">
     <i (click)="clickEvent()" [ngClass]="status ? 'bi bi-x mobile-nav-toggle d-xl-none' : 'bi bi-list mobile-nav-toggle d-xl-none'" id="toggler"></i>
     <app-header [ngClass]="status ? '' : 'goLeft'"></app-header>
-    <app-banner></app-banner>
+    <app-banner [ngClass]="status ? 'goRight' : ''"></app-banner>
     <app-main></app-main>
 </div>
