--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -8,13 +8,25 @@
             <div class="testimonial-item" data-aos="fade-up">
                 <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    Placeholder for Sicco testimonial<br><br>
+                    Yes, Tim very nice!
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+                <img src="assets/img/testimonials/sicco.jfif" class="testimonial-img" alt="">
+                <h3>Sicco Smit</h3>
+                <h4>Senior Web Developer</h4>
+            </div>
+
+            <div class="testimonial-item" data-aos="fade-up">
+                <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     I coached Tim during 6 months at BeCode, in which he has become my strongest Frontend profile.
                     What I also admire in him is his willingness to be a teamplayer and to help others.
                     He would spontaneously organise workshops for weaker students where he would help them to improve their skills, and he was always happy assist if somebody asked him for help.<br><br>
                     If you are looking for a really strong frontend profile combined with great teamplayer abilities: Pick Tim!
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/placeholder.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/koen.png" class="testimonial-img" alt="">
                 <h3>Koen Eelen</h3>
                 <h4>Senior Software Engineer & Ex Coach</h4>
             </div>
@@ -25,7 +37,7 @@
                     I have seen Tim go from a BeCode Learner to a BeCode coach. The transformation is just amazing. He has shown commitment, maturity and realistic evaluation of himself in his role as a coach. He cares for his learners and wants them to succeed. He is open minded, asks for advice and shares his opinion on topics without hesitation. <br><br>He focuses on not only helping learners but also to raise the standard of quality in what they learn and deliver.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/placeholder.png" class="testimonial-img" alt="">
+                <img src="assets/img/testimonials/kanchan.png" class="testimonial-img" alt="">
                 <h3>Kacnhan Rocha</h3>
                 <h4>Head of operations</h4>
             </div>
