--- a/src/styles.css
+++ b/src/styles.css
@@ -145,13 +145,19 @@ h6
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("assets/img/testimonials/placeholder.png") top center;
+    background: url("assets/img/banner.jpg");
     background-size: cover;
+    background-position: center;
 }
+/*
+.goRight #hero{
+    background-position-x: 300px;
+    background-position-y: center;
+}*/
 
 #hero:before {
     content: "";
-    background: rgba(5, 13, 24, 0.3);
+    background: rgba(10, 15, 10, 0.7);
     position: absolute;
     bottom: 0;
     top: 0;
