fixed spelling error Kanchan

--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -38,7 +38,7 @@
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/kanchan.png" class="testimonial-img" alt="">
-                <h3>Kacnhan Rocha</h3>
+                <h3>Kanchan Rocha</h3>
                 <h4>Head of operations</h4>
             </div>
         </div>
