update banner & profile picture

--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="testimonials-slider" data-aos="fade-up" data-aos-delay="100">
-            <div class="testimonial-item" data-aos="fade-up">
+            <div class="testimonial-item placeholderTestimonial" data-aos="fade-up">
                 <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                     Placeholder for Sicco testimonial<br><br>
