--- a/src/styles.css
+++ b/src/styles.css
@@ -145,9 +145,19 @@ h6
 #hero {
     width: 100%;
     height: 100vh;
-    background: url("assets/img/banner.jpg");
+    background: url("assets/img/shoot/banner - Copy.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: center top;
+}
+
+@media only screen and (max-width: 1200px) {
+    #hero {
+        width: 100%;
+        height: 100vh;
+        background: url("assets/img/shoot/banner.jpg");
+        background-size: cover;
+        background-position: center;
+    }
 }
 /*
 .goRight #hero{
