--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,4 +7,5 @@
     <app-interests></app-interests>
     <app-testimonials></app-testimonials>
     <app-contact></app-contact>
+    <app-copyright></app-copyright>
 </main>
